--- a/lenses/templates/lenses/lens_detail.html
+++ b/lenses/templates/lenses/lens_detail.html
@@ -357,7 +357,8 @@
             <td>{{ lens_model.name }}</td>
             <td>{{ lens_model.description }}</td>
             <td>{{ lens_model.category }}</td>
-            <td><a href="{{ lens_model.get_absolute_url }}">View</a></td>
+			<td>{{ lens_model.info}}</td>
+            <td><a href="{{lens_models.get_absolute_url}}">View</a></td>
 	</tr>
         {% endfor %}
       </tbody>
