Create, Update, Delete functionality works with Lens Models.

--- a/lenses/static/lenses/css/lens_detail.css
+++ b/lenses/static/lenses/css/lens_detail.css
@@ -100,3 +100,13 @@
 .side-by-side {
     float:left;
 }
+
+
+.lens-models td:first-child {
+    width: 250px;
+    padding-right:15px;
+}
+.lens-models td:last-child {
+    width: 250px;
+    padding-left:15px;
+}
