--- a/sled_lens_models/templates/sled_lens_models/lens_model_detail.html
+++ b/sled_lens_models/templates/sled_lens_models/lens_model_detail.html
@@ -36,6 +36,7 @@
   </button>
   
   <div>
+    {{ dmr_plot_url }}
     <img class="dmr_plot" src="{{ dmr_plot_url }}" alt="DMR Plot" />
   </div>
 
