--- a/sled_lens_models/templates/sled_lens_models/lens_model_detail.html
+++ b/sled_lens_models/templates/sled_lens_models/lens_model_detail.html
@@ -25,6 +25,24 @@
         <td>{{ lens_model.description }}</td>
       </tr>
     </table>
+
+    <table class="profiles jb-table-no-lines">
+      <tr>
+        <th>Mass profiles:</th>
+        <td>{{ lens_model.lens_mass_model|join:" , " }}</td>
+      </tr>
+      <tr>
+        <th>Lens light profiles:</th>
+	<td>{{ lens_model.lens_light_model|join:" , "|default:"-" }}</td>
+      </tr>
+      <tr>
+        <th>Source light profiles:</th>
+        <td>{{ lens_model.source_light_model|join:" , " }}</td>
+      </tr>
+    </table>
+    <p class="see-doc">
+      See the COOLEST documentation for the definitions of the <a href="https://coolest.readthedocs.io/en/latest/models/mass.html">mass</a> and <a href="https://coolest.readthedocs.io/en/latest/models/light.html">light</a> profiles.
+    </p>
   </div>
 
   <form id="myform" action="{% url 'sled_lens_models:lens-model-download' %}" method="GET">
